auditLog and other changes
